2017-06-28  Eric Herman <eric@freesa.org>

	convience function for construction/destruction

	* src/ehbigint-malloc.h:
	* src/ehbigint-malloc.c:
	* misc/pre-tidy.patch: add ehbigint.h


2017-06-05  Eric Herman <eric@freesa.org>

	Add new compare to long functions for easy of use.

	This allows easy comparing to constants like 0 or -1
	without having to instantiate a "struct ehbigint zero" or whatever.

	* src/ehbigint.h: add new foo_l function headers
	* src/ehbigint.c: impl new foo_l functions
	* tests/test-compare3.c: test various compares
	* Makefile.am: test-compare3
	* .gitignore: test-compare3
	* misc/pre-tidy.patch: respin for ehbigint.h

2017-06-04  Eric Herman <eric@freesa.org>

	Add a really stupid imple of sqrt

	* src/ehbigint.h: ehbi_sqrt declaration
	* src/ehbigint.c: really bad impl of ehbi_sqrt
	* tests/test-sqrt.c: really simple test of
	* Makefile.am: test-sqrt
	* misc/pre-tidy.patch: respin for new header
	* .gitignore: test-sqrt

2017-05-23  Eric Herman <eric@freesa.org>

	Add the #defines governing ehbi_is_probably_prime up to the header
	for greater transparency.
	Remove ehbi_bytes_shift_left,_right public API functions since bit
	shifting is now supported.

	* README: use ehbi_shift_left in docs
	* src/ehbigint.h: remove ehbi_bytes_shift_left,_right, add defines
	* src/ehbigint.c: make _bytes_shift_ functions static, remove defines
	* tests/test-bytes-shift-left.c: use ehbi_shift_left
	* tests/test-bytes-shift-right.c: use ehbi_shift_right
	* tests/test-shift-right.c: fix comment
	* tests/test-is-probably-prime.c: use min accuracy
	* misc/pre-tidy.patch: respin

2017-05-21  Eric Herman <eric@freesa.org>

	cleanup ehbi_subtract borrowing to make it easier to understand,
	and fix corner-case bug. Allow ehbi_exp_mod to have plenty of bytes
	in case of unusual input.
	collapse ebhi_dec into ehbi_subtract
	always prefix an extra 00 of bytes used regardless of sign
	cleaner temp struct initialization in macro